# AutoML

./: README.md  pyproject.toml  requirements.dev.txt  requirements.txt  setup.cfg  tox.ini
.github/workflows/: multi_tests.yml
Test/: test_Config.py
TestSuite/: test_Config.py  test_Models.py  test_Utility.py
src/: main.py
src/Config/: AutoML.ini
src/MyConfig/: Config_base.py
src/Utility/: Config.py  Utility.py  Utility_base.py
