[metadata]
name = AutoML
description = Automated Machine Learning Model Generations
author = Sugaanth Mohan
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    Utility
install_requires =
    pandas
    numpy
    sklearn
    tpot
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest
    pytest-cov
    mypy
    flake8
    tox

[options.package_data]
Utility = py.typed

[flake8]
max-line-length = 160